Bug 45429 - [bisected]oglc pxtrans-copy(advanced.logicOP.fbo) regressed
Summary: [bisected]oglc pxtrans-copy(advanced.logicOP.fbo) regressed
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i915 (show other bugs)
Version: git
Hardware: All Linux (All)
: high major
Assignee: Ian Romanick
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 42993
  Show dependency treegraph
 
Reported: 2012-01-31 01:47 UTC by fangxun
Modified: 2012-02-07 01:05 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description fangxun 2012-01-31 01:47:08 UTC
System Environment:
--------------------------
Arch:           x86_64
Platform:       Sugarbay
Libdrm:         (master)2.4.30-18-gb643b0713aefdc0611e47654e88263b53b0de6f5
Mesa:           (8.0)caebd7929dca802ece8ef36b0f85094d66133b57
Xserver:      (server-1.11-branch)xorg-server-1.11.3
Xf86_video_intel: (master)2.17.0
Kernel:   (drm-intel-fixes)a4ea430853b71753103ec693acfc8624bd3e748e

Bug detailed description:
-------------------------
It failed on pineview, Ironlake and Sandybridge. Below oglc cases also
failed:
pxtrans-draw(advanced.logicOP)
pxtrans-copy(advanced.logicOP.noFbo) 
pxtrans-copy(advanced.logicOP.separatareFbo)

Bisect shows 8e5e73542459dabd241c35d0aa3ea7c0e30bf2ed is the first bad commit.
commit 8e5e73542459dabd241c35d0aa3ea7c0e30bf2ed
Author:     Brian Paul <brianp@vmware.com>
AuthorDate: Mon Jan 16 12:03:09 2012 -0700
Commit:     Ian Romanick <ian.d.romanick@intel.com>
CommitDate: Fri Jan 27 18:02:39 2012 -0800

    mesa: remove gl_renderbuffer::DataType
    (cherry picked from commit f9874feef4d8952df5054bd8e8f4e0deda4ef44f)


Reproduce steps:
----------------
1. start X
2. ./oglconform -z -s -suite all -v 2 -test pxtrans-copy advanced.logicOP.fbo
Comment 1 Ian Romanick 2012-02-02 11:02:02 UTC
Fixed on 8.0 branch by:

commit 65b9c1dee6edbafb46f782ecc525c1dbdbf76e0d
Author: Ian Romanick <ian.d.romanick@intel.com>
Date:   Tue Jan 31 11:29:06 2012 -0700

    mesa: Convert colors if span ChanType and renderbuffer data type don't match
    
    This is a partial revert of f9874fe.  It turns out that the types
    don't always match.  Specifically, this can happen when doing
    glCopyPixels from a float FBO to a RGBA8 FBO.
    
    NOTE: This is a candidate for the 8.0 branch.
    
    Signed-off-by: Ian Romanick <ian.d.romanick@intel.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=45429
    Reviewed-by: Brian Paul <brianp@vmware.com>
    (cherry picked from commit 660ed923ded3552e023ef8c3dd9f92e6792f1bd2)
Comment 2 fangxun 2012-02-07 01:05:43 UTC
Verified with mesa 8.0 branch commit 65b500857ef9ab8b6bd16bc80e7c9cc869f35750.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.